z-index Troupe Selector bug

--- a/public/bootstrap/less/trp2.less
+++ b/public/bootstrap/less/trp2.less
@@ -137,7 +137,7 @@ h1 {
 
 #trpTroupeSelector {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   top: 64px;
   width:100%;
   height: 0px;
